...
      <SafeAreaView className="flex-1 bg-[#c7f9cc]">
        <View className="flex-1 justify-between items-center">
          <View className="w-11/12 flex-1">
            <View className="flex-row justify-between items-center mx-4 mt-4">
              <View>
                <Text className="font-extrabold text-xl text-[#22577a]">
                  Complain List
                </Text>
              </View>
              <View>
                <Button
                  mode="contained"
                  style={{ backgroundColor: "#38a3a5" }}
...
                    router.push({
                      pathname: "/(complains)/general/ManageGeneralComplain",
                      params: { isPrivate: isPrivate ? "true" : "false" },
                    })
                  }
                >
                  Add
                </Button>
              </View>
            </View>
            {isPrivate ? (
              <PrivateList
                data={data}
...
